align banners on home to the end, solved key issue of lists

--- a/src/components/Pages/HomePage/HomeTopSection.module.css
+++ b/src/components/Pages/HomePage/HomeTopSection.module.css
@@ -9,3 +9,8 @@
   position: absolute;
   bottom: 0;
 }
+
+.banners {
+  width: 100%;
+  height: auto;
+}
